--- a/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.scss
+++ b/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.scss
@@ -22,7 +22,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: sizeHeight(20);
   }
 
   .shadow {
