--- a/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.scss
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.scss
@@ -5,6 +5,7 @@
 
 .item {
   width: sizeWidth(660);
+  margin-bottom: sizeHeight(20);
 
   display: flex;
   align-items: center;
@@ -21,11 +22,9 @@
 
     display: flex;
     flex-direction: column;
-    gap: sizeHeight(16);
 
     &__title {
       display: flex;
-      gap: sizeWidth(40);
       margin-bottom: - sizeHeight(10);
 
       font-size: sizeHeight(34);
@@ -33,6 +32,7 @@
 
       .date {
         margin-left: auto;
+        margin-right: sizeWidth(40);
       }
 
       svg-icon {
@@ -43,6 +43,7 @@
 
     &__item {
       display: flex;
+      margin-top: sizeHeight(16);
 
       white-space: nowrap;
       font-size: sizeHeight(30);
@@ -56,6 +57,7 @@
     }
 
     &__fraction {
+      margin-top: sizeHeight(16);
       font-size: sizeHeight(34);
       color: var(--text-main-color);
     }
